<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <LinearLayout
      android:id="@+id/container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <com.fintonic.uikit.button.Button
        android:id="@+id/btnDisplayBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_big"
        app:button_style="PrimaryBlue"
        />

    <com.fintonic.uikit.button.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/display"
        app:button_style="PrimaryBlue"
        />

    <com.fintonic.uikit.button.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h1_black"
        app:button_style="PrimaryBlue"
        />

    <com.fintonic.uikit.button.Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/h2_black"
        />

    <com.fintonic.uikit.button.Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/h3_black"
        app:text_strategy="LowerCase"
        app:button_style="PrimaryBlue"
        />

    <com.fintonic.uikit.button.icon.ButtonIcon
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/whatsapp"
        app:text_strategy="LowerCase"
        app:button_icon_style="Whatsapp"
        />

    <com.fintonic.uikit.button.fab.ActionButton
        android:id="@+id/btnArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:button_action_style="Arrow"
        />

    <com.fintonic.uikit.button.fab.ActionButton
        android:id="@+id/btnArrowDisabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:button_action_style="Arrow"
        />

    <LinearLayout
        android:id="@+id/labelProgrammaticallly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />
  </LinearLayout>

</ScrollView>